Add stage 2 client mini app
